--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Banchina</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=BioRhyme+Expanded|Bungee+Hairline|Cedarville+Cursive|Dancing+Script|Major+Mono+Display|Meie+Script|Miniver|Mr+Bedfort|Pacifico|Satisfy|Seaweed+Script&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>What's Up Fellas?<h1>
+    <h1 align="left">C Haylins</h1>
+
+      <div class="buttonBoard">
+        <h2>Web Development Portfolio</h2>
+        <a class="link" href="https://banchina.github.io/Snake/"><button class="buttons">Snake Game</button></a>
+        <a class="link" href="https://cabin-fever.herokuapp.com/#/"><button class="buttons">Cabin Fever</button></a>
+        <a class="link" href="https://architech-hero.herokuapp.com/#/"><button class="buttons">Architech</button></a>
+      </div>
   </body>
 </html>
